import Foundation
class User{
    
}
