@startuml Domain

class "CoolManager" {
  +List<Refrigerator> refrigerators
  +List<User> users
  +void addUser(User user)
  +void addRefrigerator(Refrigerator refrigerator)
}
class "Resistance" {
  +String status
  +int powerLevel
}
class "SetPoint" {
  +float desiredTemperature
  +void setTemperature(float temperature)
}
class "Compressor" {
  +String status
  +int powerLevel
}
class "Temperature" {
  +float currentTemperature
}
class "Light" {
  +String status
  +int brightnessLevel
}
class "Refrigerator" {
  +String id
  +String status
  +float temperature
  +List<Object> components
  +void addComponent(Object component)
}
class "Fan" {
  +String status
  +int speedLevel
}
class "Door" {
  +boolean isOpen
}
class "User" {
  +String userId
  +String name
  +String role
}
class "Thermometer" {
  +float temperatureReading
  +String location
}

CoolManager *-- Refrigerator : manages
CoolManager *-- User : has
Refrigerator *-- Resistance : contains
Refrigerator *-- Compressor : contains
Refrigerator *-- Door : contains
Refrigerator *-- Fan : contains
Refrigerator *-- Light : contains
Refrigerator *-- SetPoint : contains
Refrigerator *-- Thermometer : contains
SetPoint *-- Temperature : contains

@enduml
